; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/nls2txt/extr_nls.c_NLS_RecordsCountForUnicodeTable.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/nls2txt/extr_nls.c_NLS_RecordsCountForUnicodeTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @NLS_RecordsCountForUnicodeTable(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  store i64 0, i64* %4, align 8
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %17, %1
  %6 = load i32, i32* %3, align 4
  %7 = icmp sle i32 %6, 65535
  br i1 %7, label %8, label %20

8:                                                ; preds = %5
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @NLS_IsDefaultCharForUnicode(i32 %9, i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %8
  %14 = load i64, i64* %4, align 8
  %15 = add nsw i64 %14, 1
  store i64 %15, i64* %4, align 8
  br label %16

16:                                               ; preds = %13, %8
  br label %17

17:                                               ; preds = %16
  %18 = load i32, i32* %3, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %3, align 4
  br label %5

20:                                               ; preds = %5
  %21 = load i64, i64* %4, align 8
  ret i64 %21
}

declare dso_local i32 @NLS_IsDefaultCharForUnicode(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
